# team-project-2339

./: ..gitignore.un~  .gitignore  .qmake.stash  .readthedocs.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  _BACKUP_1188.gitignore  _LOCAL_1277.gitignore  _REMOTE_1245.gitignore  opcode.rtf  target_wrapper.bat  ~$opcode.rtf
CGoogleTest/: CGoogleTest.pro  CMakeLists.txt  gtest_dependency.pri  main.cpp  tst_asm_compile.cpp  tst_asmupload.cpp  tst_coregen.cpp  tst_importfile.cpp  tst_parser.cpp  tst_render.cpp  tst_uart.cpp
CGoogleTest/PreDebugController_Test/: compiler_test.cpp  generalTest.cpp  test_conf.ini  upload_test.cpp
CPUDebugger/: .gitignore  .qmake.stash  ASMFile.h  CMakeLists.txt  CPUDebugger.pdocconf  CPUDebugger.pro  Debugger.pri  FileInputFactory.h  Module.h  ModuleData.h  QML_STUDY.pro  Signal.h  b.cpp  gtest_dependency.pri  lex.yy.cc  location.hh  main.cpp  main.qml  myobject1.cpp  myobject1.h  qmake_qmake_qm_files.qrc  qml.qrc  resourse.qrc  result.txt  test.cpp  test2.asm  tst_case1.cpp  uart.pri  upload_test.cpp  valid.asm  verilog_parser.tab.cc  verilog_parser.tab.hh  view.pri
CPUDebugger/.cache/clangd/index/: DebugController.h.740F13B2C780A419.idx  PreDebugController.h.48179CFA5750A77D.idx  main.cpp.70844E4DAC0E44AA.idx
CPUDebugger/.history/: CPUDebugger_20230411222349.pro  CPUDebugger_20230411222459.pro  CPUDebugger_20230411222529.pro  b_20230412184422.cpp
CPUDebugger/.qtc_clangd/: compile_commands.json
CPUDebugger/Comm/: comm.cpp  comm.h  sender.cpp  sender.h
CPUDebugger/Controllers/: DebugController.cpp  DebugController.h  PreDebugController.cpp  PreDebugController.h
CPUDebugger/File/: AsmFile.cpp  AsmFile.h  CoeFile.cpp  CoeFile.h  DebugFile.cpp  DebugFile.h  test.asm
CPUDebugger/PreDebugController_Test/: compiler_test.cpp  generalTest.cpp  upload_test.cpp  work_test.cpp
CPUDebugger/QML/: page1.qml  page2.qml  page3.qml  page4.qml
CPUDebugger/Stores/: DebugStore.cpp  DebugStore.h  PreDebugStore.cpp  PreDebugStore.h
CPUDebugger/controller/: FileController.cpp  FileController.h  controller.pri
CPUDebugger/debug/: moc_predefs.h
CPUDebugger/googletest/: CMakeLists.txt  CONTRIBUTING.md  README.md  WORKSPACE  googletest_deps.bzl
CPUDebugger/googletest/.github/ISSUE_TEMPLATE/: 00-bug_report.yml  10-feature_request.yml  config.yml
CPUDebugger/googletest/.github/workflows/: gtest-ci.yml
CPUDebugger/googletest/ci/: linux-presubmit.sh  macos-presubmit.sh  windows-presubmit.bat
CPUDebugger/googletest/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  primer.md  quickstart-bazel.md  quickstart-cmake.md  samples.md
CPUDebugger/googletest/docs/_layouts/: default.html
CPUDebugger/googletest/docs/reference/: assertions.md  matchers.md  testing.md
CPUDebugger/googletest/googlemock/src/: gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
CPUDebugger/googletest/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_leak_test.py  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_output_test_golden.txt  gmock_test.cc  gmock_test_utils.py
CPUDebugger/googletest/googletest/: CMakeLists.txt  README.md
CPUDebugger/googletest/googletest/cmake/: internal_utils.cmake
CPUDebugger/googletest/googletest/samples/: prime_tables.h  sample10_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
CPUDebugger/googletest/googletest/src/: gtest-assertion-result.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
CPUDebugger/googletest/googletest/test/: googletest-break-on-failure-unittest.py  googletest-break-on-failure-unittest_.cc  googletest-catch-exceptions-test.py  googletest-color-test.py  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-env-var-test.py  googletest-failfast-unittest.py  googletest-filepath-test.cc  googletest-filter-unittest.py  googletest-global-environment-unittest.py  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-list-tests-unittest.py  googletest-list-tests-unittest_.cc  googletest-listener-test.cc  googletest-message-test.cc  googletest-options-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-param-test-invalid-name1-test.py  googletest-param-test-invalid-name2-test.py  googletest-param-test-invalid-name2-test_.cc  (+28 more)
CPUDebugger/model/: ASMFile.cpp  CPUSignal.h  FFile.cpp  FFile.h  FileInputFactory.cpp  FileInputFactory.h  FileOutputFactory.h  FileStore.cpp  FileStore.h  FileUtil.cpp  FileUtil.h  Generator.cpp  Generator.h  Module.h  ModuleData.h  MySignal.h  TopModule.h  TopVFileInputFactory.cpp  TopVFileInputFactory.h  VFile.cpp  VFile.h  model.pri
CPUDebugger/model/compile/: CParser.cpp  CParser.h  CompileFactory.cpp  CompileFactory.h  MAlex.cpp  MAlex.h  PreProcessor.cpp  PreProcessor.h  compiler.cpp  compiler.h  global_compile.cpp  global_compile.h
CPUDebugger/model/exception/: QProcessingException.h
CPUDebugger/model/render/: GraphRender.h
CPUDebugger/parse-verilog/: lex.yy.cc  location.hh  parse-verilog.pri  verilog_data.hpp  verilog_driver.hpp  verilog_lexer.l  verilog_parser.tab.cc  verilog_parser.tab.hh  verilog_parser.yy  verilog_scanner.hpp
CPUDebugger/uart/: CoreGenerator.cpp  CoreGenerator.h  comm.cpp  comm.h  comm_fake.cpp  comm_fake.h  sender.cpp  sender.h  template.v  top.v  uart.pri  uartSimulator.cpp  uartSimulator.h
CPUDebugger/uart/assets/: debug_unit.v  template.v
CPUDebugger/utils/: utils-黄梓通的MacBook Air.h  utils.h
CPUDebugger/view/: main.qml  myobject1.cpp  myobject1.h  resourse.qrc  view.pri  worker1.h
(+2746 files in other folders)
